fix: scroll buttons to edges on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -417,7 +417,7 @@ a:active {
   }
   .genderQuota img {
     padding-bottom: unset;
-    bottom: -6px;
+    bottom: 20px;
   }
   .kulak img {
     width: 82%;
@@ -469,7 +469,7 @@ a:active {
   }
 
   .burqa p {
-    padding: 120px 15px 0;
+    padding: 110px 15px 0;
   }
   .burqa img {
     width: 342px;
@@ -691,15 +691,22 @@ svg #wheel {
   left: 50px;
 }
 
+.right {
+  right: 50px;
+}
+
 @media screen and (max-width: 700px) {
   .left svg,
   .right svg {
     width: 42px;
   }
-}
 
-.right {
-  right: 50px;
+  .left {
+    left: 0px;
+  }
+  .right {
+    right: 0px;
+  }
 }
 
 div.timeline.absent::after {
